@@ -104,6 +104,8 @@ Dan Book, C<dbook@cpan.org>
 
 =over
 
+=item Graham Knop (haarg)
+
 =item H.Merijn Brand (Tux)
 
 =item John SJ Anderson (genehack)
